Remove CS-Club link from theme configuration
Co-authored-by: zombieking1555 <156970151+zombieking1555@users.noreply.github.com>

--- a/pages/Home/Programming/index.mdx
+++ b/pages/Home/Programming/index.mdx
@@ -115,7 +115,7 @@ Meanwhile, the Software Wing is the quiet mastermind in the background, building
       description: "The FRC Wing is the heart of our robot's programming, focusing on real-time control, autonomous systems, and competition strategies.",
       icon: "🤖",
       color: "blue",
-      link: "/Programming/FRC",
+      link: "Home/Programming/FRC",
       buttonText: "Explore FRC Wing"
     },
     {
@@ -123,7 +123,7 @@ Meanwhile, the Software Wing is the quiet mastermind in the background, building
       description: "The Software Wing builds the digital backbone of our team, creating tools and platforms that enhance our strategic capabilities.",
       icon: "💻",
       color: "purple",
-      link: "/Programming/Software",
+      link: "Home/Programming/Software",
       buttonText: "Explore Software Wing"
     }
   ]}
