--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -41,7 +41,7 @@ Discover the dedicated teams within FEDS 201, each contributing to a different a
   icon={<FaCode />}
   title="Programming"
   description="Explore two powerful wings of the Programming team: FRC  and Software. Learn how we build, organize, and maintain our robot’s codebase using Java and WPILib, while also diving into web technologies that power our custom scouting platform. Master programming languages and tools that make data-driven robotics possible."
-  href="/Programming"
+  href="Home/Programming"
   gradient="linear-gradient(135deg, #667eea 0%,#764ba2 100%)"
   customStyles={{ backgroundColor: 'rgba(54, 98, 180, 0.26)', color: 'white', boxShadow: '0 4px 8px rgba(255, 255, 255, 0.1)' }}
 />
@@ -50,7 +50,7 @@ Discover the dedicated teams within FEDS 201, each contributing to a different a
   icon={<FaPlug />}
   title="Electrical Systems"
   description="Understand how power flows through the robot. Dive into wiring best practices, sensor integration, power management, and safety standards. This section teaches how to bring a robot to life—reliably and safely—through clean, efficient electrical work."
-  href="/Electrical/Tools&Setup"
+  href="Home/Electrical/Tools&Setup"
   gradient="linear-gradient(135deg, #f59e0b 0%, #d97706 100%)"
   customStyles={{
     backgroundColor: "rgba(54, 98, 180, 0.26)",
@@ -63,7 +63,7 @@ Discover the dedicated teams within FEDS 201, each contributing to a different a
   icon={<FaCube />}
   title="CAD & Design"
   description="Get started with Onshape and explore everything a CAD designer needs to succeed—from 3D modeling and mechanical layout to design reviews and manufacturing drawings. Learn the skills to translate imagination into engineered reality."
-  href="/CAD/Introduction"
+  href="/Home/CAD/Introduction"
   gradient="linear-gradient(135deg, #10b981 0%, #059669 100%)"
   customStyles={{
     backgroundColor: "rgba(54, 98, 180, 0.26)",
@@ -76,7 +76,7 @@ Discover the dedicated teams within FEDS 201, each contributing to a different a
   icon={<ImCogs />}
   title="Mechanical Engineering"
   description="Welcome to the Mechanical Subgroup of FEDS201! This section includes design resources, tool guides, project logs, and lessons learned. From alignment issues to tool wear, dive deep into real-world mechanical problem-solving and documentation of past builds and assemblies."
-  href="/Mechanical/Index"
+  href="/Home/Mechanical/Index"
   gradient="linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%)"
   customStyles={{
     backgroundColor: "rgba(54, 98, 180, 0.26)",
@@ -145,7 +145,7 @@ Learn from our championship journey and discover what it takes to compete at the
     bgPattern="waves"
     title="2025 Season Journey"
     description="Follow our weekly progression through the 2025 season. Detailed insights into our design process, challenges overcome, and lessons learned."
-    href="/Experiences/2025"
+    href="/Home/Experiences/2025"
     gradient="linear-gradient(135deg, #f59e0b 0%, #d97706 100%)"
     customStyles={{backgroundColor: "rgba(123, 54, 180, 0.13)", color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
 
@@ -334,7 +334,7 @@ Leading the way in environmentally responsible robotics through innovation and c
       flexWrap: "wrap",
     }}
   >
-    <Link href="/Programming">
+    <Link href="Home/Programming">
       <div
         style={{
           display: "inline-flex",
