--- a/pages/Tutorials/ZeroToHero/ZeroToHero1.mdx
+++ b/pages/Tutorials/ZeroToHero/ZeroToHero1.mdx
@@ -383,7 +383,7 @@ public class ArmSubsystem extends SubsystemBase {
 
 ### Understanding TalonFX Motors
 
-The **TalonFX** (also called Falcon 500) is one of the most popular motors in FRC. It's basically the Tesla of robot motors - brushless, smart, and comes with its own built-in encoder. It's like having a motor with a PhD! 🎓
+A **TalonFX** Motor (Such as a Kraken X60 or Falcon 500) is one of the most popular motors in FRC. It's basically the Tesla of robot motors - brushless, smart, and comes with its own built-in encoder. It's like having a motor with a PhD! 🎓
 
 <Callout type="info" emoji="💡">
 TalonFX motors use the CTRE Phoenix framework. Make sure you have the Phoenix vendordep installed in your project, or your motor will just sit there looking expensive and doing nothing! 💸
