--- a/pages/Tutorials/ZeroToHero/ZeroToHero1.mdx
+++ b/pages/Tutorials/ZeroToHero/ZeroToHero1.mdx
@@ -18,8 +18,9 @@ import {
     <meta property="og:title" content="Zero to Hero Episode 1: Introduction to WPILib - FEDS201" key="title" />
 </Head>
 
-<GenericHero 
+<GenericHero
   title="Zero to Hero #1" 
+  titleColor="linear-gradient(135deg, #ffd700 0%, #ffb347 20%, #ff8c69 40%, #f4a460 60%, #daa520 80%, #b8860b 100%)"
   subtitle="Introduction to WPILib 🚀"
   description="From 'What's a robot?' to 'I AM THE ROBOT WHISPERER!' 🤖 This guide will transform you from a programming newbie into someone who can make motors spin with the power of your mind (and Java). Warning: Side effects may include uncontrollable urge to name your robots."
   backgroundType="gradient"
@@ -984,3 +985,9 @@ Remember: Programming is like learning to ride a bike, except the bike is on fir
 ---
 
 *This documentation is part of the Zero to Hero programming series. For the complete learning experience, watch the accompanying video and practice with real robot code. Remember: the only way to get good at programming is to write lots of bad code first! 😄*
+
+<Callout type="info" emoji="💝">
+**Special Thanks**: To all the students who asked "Why doesn't this work?" and inspired us to create better documentation. Your questions make us better teachers, and your curiosity drives innovation. You're the real MVPs! 🏆
+
+*Remember: Every expert was once a beginner who refused to give up. Keep coding, keep learning, and most importantly - keep having fun! 🚀*
+</Callout>
