--- a/pages/Home/Programming/FRC/Tools&Setup.mdx
+++ b/pages/Home/Programming/FRC/Tools&Setup.mdx
@@ -19,18 +19,18 @@ import { LuRadioTower } from "react-icons/lu";
 Welcome to the Programming subgroup! This guide is designed to help you get started with the tools and technologies used by our team. Whether you're new to programming or looking to sharpen your skills, this guide has something for everyone. We'll cover the software, hardware, and libraries you need to develop the code that controls the robot.
 <Cards>
 <Card title="Java Development Kit (JDK)" target="_blank" href="https://www.oracle.com/java/technologies/javase-jdk11-downloads.html"  icon={ <FaJava/> } />
-<Card title="IntelliJ IDEA" target="_blank" href="https://www.jetbrains.com/idea/download/download-thanks.html?platform=windows&code=IIC" icon={<SiIntellijidea/>}/>
+<Card title="IntelliJ IDEA" target="_blank" href="https://www.jetbrains.com/idea/download" icon={<SiIntellijidea/>}/>
 <Card title="Visual Studio Code" target="_blank" href="https://code.visualstudio.com/download" icon={<VscVscode/>} />
-<Card title="Git Client" target="_blank" href="https://www.git-scm.com/download/win" icon={<FaGitAlt/>}/>
-<Card title="Github Desktop" target="_blank" href="https://desktop.github.com/" icon={<FaGithub/>}/>
+<Card title="Git Client" target="_blank" href="https://www.git-scm.com/downloads" icon={<FaGitAlt/>}/>
+<Card title="Github Desktop" target="_blank" href="https://desktop.github.com/download/" icon={<FaGithub/>}/>
 <Card title="Git Kraken" target="_blank" href="https://www.gitkraken.com/download" icon={<FaGitkraken/>}/>
-<Card title="WPI Library" target="_blank" href="https://packages.wpilib.workers.dev/installer/v2024.3.2/Win64/WPILib_Windows-2024.3.2.iso"  icon={<PiGearSixBold/>} />
+<Card title="WPI Library" target="_blank" href="https://github.com/wpilibsuite/allwpilib/releases"  icon={<PiGearSixBold/>} />
 <Card title="CTRE Phoenix TunerX" target="_blank" href="https://apps.microsoft.com/store/detail/phoenix-tuner/9NVV4PWDW27Z"  icon={<MdTune/>} />
 <Card title="National Instruments Tools" target="_blank" href="https://www.ni.com/en/support/downloads/software-products/download.labview-software-for-frc.html" icon={<FaTools/>}/>
 <Card title="LimeLight" target="_blank" href="https://limelightvision.io/pages/downloads"  icon={<RiCameraLensFill/>} />
 <Card title="Photon Vision" target="_blank" href="https://github.com/PhotonVision/photonvision/releases"  icon={<RiCameraLensLine/>} />
 <Card title="REV Client" target="_blank" href="https://www.revrobotics.com/sparkmax-software/#spark-max-client"  icon={<SiIrobot/>} />
-<Card title={"PathPlanner"} target={"_blank"} href={"https://github.com/mjansen4857/pathplanner/releases/tag/2024.1.7"} icon={<FaRoad/>} />
+<Card title={"PathPlanner"} target={"_blank"} href={"https://github.com/mjansen4857/pathplanner/releases"} icon={<FaRoad/>} />
 <Card title={"Apple Bonjour"} target={"_blank"} href={"https://support.apple.com/en-us/106380"} icon={<LuRadioTower/>} />
 </Cards>
 <br/>
